--- a/css/style.css
+++ b/css/style.css
@@ -191,14 +191,14 @@ img:hover{
 }
 
 
-.section-container{padding:100px 40px 40px;max-width:1200px;margin:auto;}
+.section-container{padding:50px 40px 40px;max-width:1200px;margin:auto;}
 h3{font-size:2rem;margin-bottom:20px;color:#b31afa;}
 .cards{display:flex;flex-wrap:wrap;gap:20px;}
 .card{background:rgba(255,255,255,0.05);border-radius:15px;padding:20px;flex:1 1 calc(50% - 40px);min-width:280px;backdrop-filter:blur(8px);box-shadow:0 4px 20px rgba(0,0,0,0.5);transition:transform .3s;}
 .card:hover{transform:translateY(-5px);} 
 .card h4{margin-bottom:10px;color:#fff;}
 .card span{font-size:0.9rem;color:#ccc;display:block;margin-bottom:10px;}
-.card p{font-size:1rem;line-height:1.5;}
+.card p{font-size:1rem;line-height:1.5;color: #b31afa;}
 
 /* Projects grid */
 .projects-grid .project-card{flex:1 1 calc(33.333% - 40px);}
@@ -241,6 +241,11 @@ h3{font-size:2rem;margin-bottom:20px;color:#b31afa;}
     }
     .menu-toggle {
         display: block;
+    }
+    .me h5{
+        font-size: 1.75rem;
+    font-weight: bolder;
+    color: #fff;
     }
 
     /* ==ABOUT== */
