--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,7 @@ img:hover{
     transform: scale(1.5);
 }
 .right-img{
+    height: 700px;
     padding-top: 30px;
     padding-left: 250px;
 }
@@ -177,6 +178,9 @@ img:hover{
 .social a:hover{
     color: #fff;
     border-color: #fff;
+}
+.stat{
+    margin-top: -200px;
 }
 .stat-info .num{
     font-weight: bolder;
